--- a/index.html
+++ b/index.html
@@ -146,70 +146,95 @@
     </div>
   </div>
 
-  <script>
-    function redirect() {
-      const country = sessionStorage.getItem('country');
-      if (country === "SE") {
-        window.location.href = "https://cbdflora.se/collections/cbd-olja";
-      } else {
-        window.location.href = "https://cbdflora.com/collections/cbd-oil";
+ <script>
+  function redirect() {
+    const country = sessionStorage.getItem('country');
+    if (country === "SE") {
+      window.location.href = "https://cbdflora.se/collections/cbd-olja";
+    } else {
+      window.location.href = "https://cbdflora.com/collections/cbd-oil";
+    }
+  }
+
+  function deny() {
+    alert("Du måste vara över 18 år för att fortsätta.");
+  }
+
+  function openModal() {
+    document.getElementById('termsModal').style.display = 'block';
+  }
+
+  function closeModal() {
+    document.getElementById('termsModal').style.display = 'none';
+  }
+
+  window.onclick = function(event) {
+    const modal = document.getElementById('termsModal');
+    if (event.target == modal) {
+      modal.style.display = "none";
+    }
+  }
+
+  // Geo redirect och språk
+  fetch("https://ipapi.co/json/")
+    .then(response => response.json())
+    .then(data => {
+      const country = data.country;
+      sessionStorage.setItem('country', country);
+
+      const hostname = window.location.hostname;
+
+      // Automatiska omdirigeringar
+      if (country === "SE" && hostname.includes("cbdflora.com")) {
+        window.location.href = "https://cbdflora.se";
+      } else if ((country === "DE" || country === "FR") && hostname.includes("cbdflora.se")) {
+        window.location.href = "https://cbdflora.com";
       }
-    }
 
-    function deny() {
-      alert("Du måste vara över 18 år för att fortsätta.");
-    }
-
-    function openModal() {
-      document.getElementById('termsModal').style.display = 'block';
-    }
-
-    function closeModal() {
-      document.getElementById('termsModal').style.display = 'none';
-    }
-
-    window.onclick = function(event) {
-      const modal = document.getElementById('termsModal');
-      if (event.target == modal) {
-        modal.style.display = "none";
+      // Språkändring beroende på land
+      if (country === "FR") {
+        document.querySelector("html").lang = "fr";
+        document.querySelector("h1").textContent = "Avez-vous plus de 18 ans ?";
+        document.querySelector("p").textContent = "Vous devez avoir plus de 18 ans pour utiliser ce site.";
+        document.querySelector(".btn").textContent = "Oui";
+        document.querySelector(".btn-secondary").textContent = "Non";
+        document.querySelector(".terms-link").textContent = "Conditions";
+        document.querySelector(".modal-content").innerHTML = `
+          <span class="close" onclick="closeModal()">&times;</span>
+          <hr>
+          <p><strong>Avertissement :</strong> Ce site est destiné uniquement à des fins informatives et s'adresse exclusivement aux personnes de plus de 18 ans. Nous fournissons des informations générales sur les produits à base de plantes et un mode de vie naturel. Aucune information sur ce site ne constitue un avis médical ou des allégations de santé. Les visiteurs sont seuls responsables de leurs décisions et actions après avoir quitté ce site.</p>
+          <p>En continuant, vous confirmez que vous êtes majeur et assumez l'entière responsabilité des informations que vous choisissez de consulter au-delà de cette page.</p>
+        `;
+      } else if (country === "DE") {
+        document.querySelector("html").lang = "de";
+        document.querySelector("h1").textContent = "Sind Sie über 18 Jahre alt?";
+        document.querySelector("p").textContent = "Sie müssen über 18 Jahre alt sein, um diese Website zu nutzen.";
+        document.querySelector(".btn").textContent = "Ja";
+        document.querySelector(".btn-secondary").textContent = "Nein";
+        document.querySelector(".terms-link").textContent = "Bedingungen";
+        document.querySelector(".modal-content").innerHTML = `
+          <span class="close" onclick="closeModal()">&times;</span>
+          <hr>
+          <p><strong>Haftungsausschluss:</strong> Diese Website dient nur zu Informationszwecken und richtet sich ausschließlich an Personen über 18 Jahren. Wir stellen allgemeine Informationen über pflanzliche Produkte und einen natürlichen Lebensstil bereit. Keine Information auf dieser Seite stellt eine medizinische Beratung oder Gesundheitsbehauptung dar. Besucher sind selbst für ihre Entscheidungen und Handlungen nach dem Verlassen dieser Seite verantwortlich.</p>
+          <p>Durch die Fortsetzung bestätigen Sie, dass Sie volljährig sind und die volle Verantwortung für alle Informationen übernehmen, auf die Sie über diese Seite hinaus zugreifen.</p>
+        `;
+      } else if (country !== "SE") {
+        // Standard för övriga länder = engelska
+        document.querySelector("html").lang = "en";
+        document.querySelector("h1").textContent = "Are you over 18?";
+        document.querySelector("p").textContent = "You must be over 18 to use this website.";
+        document.querySelector(".btn").textContent = "Yes";
+        document.querySelector(".btn-secondary").textContent = "No";
+        document.querySelector(".terms-link").textContent = "Terms";
+        document.querySelector(".modal-content").innerHTML = `
+          <span class="close" onclick="closeModal()">&times;</span>
+          <hr>
+          <p><strong>Disclaimer:</strong> This website is intended for informational purposes only and directed solely to individuals over 18 years of age. We provide general information about plant-based products and natural lifestyle. Nothing on this site constitutes medical advice or health claims. Visitors are responsible for their own decisions and actions after leaving this site.</p>
+          <p>By continuing, you confirm that you are of legal age and take full responsibility for any information you choose to access beyond this page.</p>
+        `;
       }
-    }
-
-    // Geo redirect och språk
-    fetch("https://ipapi.co/json/")
-      .then(response => response.json())
-      .then(data => {
-        const country = data.country;
-        sessionStorage.setItem('country', country);
-
-        const hostname = window.location.hostname;
-
-        // Automatiska omdirigeringar
-        if (country === "SE" && hostname.includes("cbdflora.com")) {
-          window.location.href = "https://cbdflora.se";
-        } else if ((country === "DE" || country === "FR") && hostname.includes("cbdflora.se")) {
-          window.location.href = "https://cbdflora.com";
-        }
-
-        // Språkändring om ej svensk
-        if (country !== "SE") {
-          document.querySelector("html").lang = "en";
-          document.querySelector("h1").textContent = "Are you over 18?";
-          document.querySelector("p").textContent = "You must be over 18 to use this website.";
-          document.querySelector(".btn").textContent = "Yes";
-          document.querySelector(".btn-secondary").textContent = "No";
-          document.querySelector(".terms-link").textContent = "Terms";
-          document.querySelector(".modal-content").innerHTML = `
-            <span class="close" onclick="closeModal()">&times;</span>
-            <hr>
-            <p><strong>Disclaimer:</strong> This website is intended for informational purposes only and directed solely to individuals over 18 years of age. We provide general information about plant-based products and natural lifestyle. Nothing on this site constitutes medical advice or health claims. Visitors are responsible for their own decisions and actions after leaving this site.</p>
-            <p>By continuing, you confirm that you are of legal age and take full responsibility for any information you choose to access beyond this page.</p>
-          `;
-        }
-      })
-      .catch(error => {
-        console.error("Geo lookup failed", error);
-      });
-  </script>
-</body>
-</html>
+    })
+    .catch(error => {
+      console.error("Geo lookup failed", error);
+    });
+</script>
