--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Confirm Your Age</title>
+
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17055290930"></script>
   <script>
@@ -25,20 +29,17 @@
   </script>
   <noscript>
     <img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=1602398350422066&ev=PageView&noscript=1" />
+         src="https://www.facebook.com/tr?id=1602398350422066&ev=PageView&noscript=1"/>
   </noscript>
   <!-- End Meta Pixel Code -->
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bekräfta din ålder</title>
   <style>
     body {
       margin: 0;
       padding: 0;
       background-color: #f6f5ee;
       font-family: Arial, sans-serif;
-      display: flex;
+      display: none; /* Göm tills språket är satt */
       justify-content: center;
       align-items: center;
       height: 100dvh;
@@ -129,22 +130,22 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Är du över 18 år?</h1>
-    <p>Du måste vara över 18 år för att använda den här webbplatsen</p>
-    <button class="btn" onclick="redirect()">Ja</button>
-    <button class="btn btn-secondary" onclick="deny()">Nej</button>
-    <span class="terms-link" onclick="openModal()">Villkor</span>
-  </div>
+<div class="container">
+  <h1 id="title">Are you over 18?</h1>
+  <p id="message">You must be over 18 to use this website.</p>
+  <button class="btn" id="yesBtn" onclick="redirect()">Yes</button>
+  <button class="btn btn-secondary" id="noBtn" onclick="deny()">No</button>
+  <span class="terms-link" id="termsLink" onclick="openModal()">Terms</span>
+</div>
 
-  <div id="termsModal" class="modal">
-    <div class="modal-content">
-      <span class="close" onclick="closeModal()">&times;</span>
-      <hr>
-      <p><strong>Ansvarsfriskrivning:</strong> Denna webbplats är avsedd för informationssyfte och riktar sig endast till personer över 18 år. Vi tillhandahåller allmän information om växtbaserade produkter och naturlig livsstil. Ingen information på denna sida utgör medicinsk rådgivning, rekommendationer eller påstående om hälsofördelar. Besökare ansvarar själva för sina val och handlingar efter att ha lämnat denna webbplats.</p>
-      <p>Genom att fortsätta godkänner du att du är myndig och själv tar ansvar för vilken information du väljer att ta del av efter denna sida.</p>
-    </div>
+<div id="termsModal" class="modal">
+  <div class="modal-content" id="modalContent">
+    <span class="close" onclick="closeModal()">&times;</span>
+    <hr>
+    <p><strong>Disclaimer:</strong> This website is intended for informational purposes only and directed solely to individuals over 18 years of age. We provide general information about plant-based products and natural lifestyle. Nothing on this site constitutes medical advice or health claims. Visitors are responsible for their own decisions and actions after leaving this site.</p>
+    <p>By continuing, you confirm that you are of legal age and take full responsibility for any information you choose to access beyond this page.</p>
   </div>
+</div>
 
 <script>
   function redirect() {
@@ -159,7 +160,7 @@
   }
 
   function deny() {
-    alert("Du måste vara över 18 år för att fortsätta.");
+    alert("You must be over 18 to continue.");
   }
 
   function openModal() {
@@ -170,74 +171,66 @@
     document.getElementById('termsModal').style.display = 'none';
   }
 
-  window.onclick = function(event) {
-    const modal = document.getElementById('termsModal');
-    if (event.target == modal) {
-      modal.style.display = "none";
-    }
-  }
+  window.addEventListener('DOMContentLoaded', () => {
+    fetch("https://ipapi.co/json/")
+      .then(response => response.json())
+      .then(data => {
+        const country = data.country;
+        sessionStorage.setItem('country', country);
 
-  fetch("https://ipapi.co/json/")
-    .then(response => response.json())
-    .then(data => {
-      const country = data.country;
-      sessionStorage.setItem('country', country);
+        const lang = {
+          SE: {
+            lang: "sv",
+            title: "Är du över 18 år?",
+            message: "Du måste vara över 18 år för att använda den här webbplatsen",
+            yes: "Ja",
+            no: "Nej",
+            terms: "Villkor",
+            modal: `<span class="close" onclick="closeModal()">&times;</span><hr>
+              <p><strong>Ansvarsfriskrivning:</strong> Denna webbplats är avsedd för informationssyfte och riktar sig endast till personer över 18 år. Vi tillhandahåller allmän information om växtbaserade produkter och naturlig livsstil. Ingen information på denna sida utgör medicinsk rådgivning eller påstående om hälsofördelar. Besökare ansvarar själva för sina val och handlingar efter att ha lämnat denna webbplats.</p>
+              <p>Genom att fortsätta godkänner du att du är myndig och själv tar ansvar för vilken information du väljer att ta del av efter denna sida.</p>`
+          },
+          DE: {
+            lang: "de",
+            title: "Sind Sie über 18 Jahre alt?",
+            message: "Sie müssen über 18 Jahre alt sein, um diese Website zu nutzen.",
+            yes: "Ja",
+            no: "Nein",
+            terms: "Bedingungen",
+            modal: `<span class="close" onclick="closeModal()">&times;</span><hr>
+              <p><strong>Haftungsausschluss:</strong> Diese Website dient nur zu Informationszwecken und richtet sich ausschließlich an Personen über 18 Jahren. Wir stellen allgemeine Informationen über pflanzliche Produkte und einen natürlichen Lebensstil bereit. Keine Information auf dieser Seite stellt eine medizinische Beratung oder Gesundheitsbehauptung dar. Besucher sind selbst für ihre Entscheidungen und Handlungen nach dem Verlassen dieser Seite verantwortlich.</p>
+              <p>Durch die Fortsetzung bestätigen Sie, dass Sie volljährig sind und die volle Verantwortung für alle Informationen übernehmen, auf die Sie über diese Seite hinaus zugreifen.</p>`
+          }
+        };
 
-      const hostname = window.location.hostname;
+        if (lang[country]) {
+          document.documentElement.lang = lang[country].lang;
+          document.getElementById('title').textContent = lang[country].title;
+          document.getElementById('message').textContent = lang[country].message;
+          document.getElementById('yesBtn').textContent = lang[country].yes;
+          document.getElementById('noBtn').textContent = lang[country].no;
+          document.getElementById('termsLink').textContent = lang[country].terms;
+          document.getElementById('modalContent').innerHTML = lang[country].modal;
+        }
 
-      if (country === "SE" && hostname.includes("cbdflora.com")) {
-        window.location.href = "https://cbdflora.se";
-      } else if (country === "DE" && hostname.includes("cbdflora.se")) {
-        window.location.href = "https://cbdflora.com/de/collections/cbd-oil";
-      } else if (country === "FR" && hostname.includes("cbdflora.se")) {
-        window.location.href = "https://cbdflora.com";
-      }
+        // Redirect domain if necessary
+        const hostname = window.location.hostname;
+        if (country === "SE" && hostname.includes("cbdflora.com")) {
+          window.location.href = "https://cbdflora.se";
+        } else if (country === "DE" && hostname.includes("cbdflora.se")) {
+          window.location.href = "https://cbdflora.com/de/collections/cbd-oil";
+        } else if (country === "FR" && hostname.includes("cbdflora.se")) {
+          window.location.href = "https://cbdflora.com";
+        }
 
-      // Språkändringar
-      if (country === "FR") {
-        document.querySelector("html").lang = "fr";
-        document.querySelector("h1").textContent = "Avez-vous plus de 18 ans ?";
-        document.querySelector("p").textContent = "Vous devez avoir plus de 18 ans pour utiliser ce site.";
-        document.querySelector(".btn").textContent = "Oui";
-        document.querySelector(".btn-secondary").textContent = "Non";
-        document.querySelector(".terms-link").textContent = "Conditions";
-        document.querySelector(".modal-content").innerHTML = `
-          <span class="close" onclick="closeModal()">&times;</span>
-          <hr>
-          <p><strong>Avertissement :</strong> Ce site est destiné uniquement à des fins informatives et s'adresse exclusivement aux personnes de plus de 18 ans. Nous fournissons des informations générales sur les produits à base de plantes et un mode de vie naturel. Aucune information sur ce site ne constitue un avis médical ou des allégations de santé. Les visiteurs sont seuls responsables de leurs décisions et actions après avoir quitté ce site.</p>
-          <p>En continuant, vous confirmez que vous êtes majeur et assumez l'entière responsabilité des informations que vous choisissez de consulter au-delà de cette page.</p>
-        `;
-      } else if (country === "DE") {
-        document.querySelector("html").lang = "de";
-        document.querySelector("h1").textContent = "Sind Sie über 18 Jahre alt?";
-        document.querySelector("p").textContent = "Sie müssen über 18 Jahre alt sein, um diese Website zu nutzen.";
-        document.querySelector(".btn").textContent = "Ja";
-        document.querySelector(".btn-secondary").textContent = "Nein";
-        document.querySelector(".terms-link").textContent = "Bedingungen";
-        document.querySelector(".modal-content").innerHTML = `
-          <span class="close" onclick="closeModal()">&times;</span>
-          <hr>
-          <p><strong>Haftungsausschluss:</strong> Diese Website dient nur zu Informationszwecken und richtet sich ausschließlich an Personen über 18 Jahren. Wir stellen allgemeine Informationen über pflanzliche Produkte und einen natürlichen Lebensstil bereit. Keine Information auf dieser Seite stellt eine medizinische Beratung oder Gesundheitsbehauptung dar. Besucher sind selbst für ihre Entscheidungen und Handlungen nach dem Verlassen dieser Seite verantwortlich.</p>
-          <p>Durch die Fortsetzung bestätigen Sie, dass Sie volljährig sind und die volle Verantwortung für alle Informationen übernehmen, auf die Sie über diese Seite hinaus zugreifen.</p>
-        `;
-      } else {
-        document.querySelector("html").lang = "en";
-        document.querySelector("h1").textContent = "Are you over 18?";
-        document.querySelector("p").textContent = "You must be over 18 to use this website.";
-        document.querySelector(".btn").textContent = "Yes";
-        document.querySelector(".btn-secondary").textContent = "No";
-        document.querySelector(".terms-link").textContent = "Terms";
-        document.querySelector(".modal-content").innerHTML = `
-          <span class="close" onclick="closeModal()">&times;</span>
-          <hr>
-          <p><strong>Disclaimer:</strong> This website is intended for informational purposes only and directed solely to individuals over 18 years of age. We provide general information about plant-based products and natural lifestyle. Nothing on this site constitutes medical advice or health claims. Visitors are responsible for their own decisions and actions after leaving this site.</p>
-          <p>By continuing, you confirm that you are of legal age and take full responsibility for any information you choose to access beyond this page.</p>
-        `;
-      }
-    })
-    .catch(error => {
-      console.error("Geo lookup failed", error);
-    });
+        // Visa innehåll efter laddning
+        document.body.style.display = "flex";
+      })
+      .catch(error => {
+        console.error("Geo lookup failed", error);
+        document.body.style.display = "flex"; // Visa ändå som fallback
+      });
+  });
 </script>
 </body>
 </html>
